# colab-gsoc2019-Nikhil_Khedekar

./: .gitignore  .gitmodules  README.md
catkin_ws/src/drone_exercises/: CMakeLists.txt  package.xml
catkin_ws/src/drone_exercises/launch/: follow_road_environment.launch  mavros_px4_sitl.launch
catkin_ws/src/drone_exercises/models/rotors_description/urdf/: iris_base.xacro
catkin_ws/src/drone_exercises/src/: av_height.py  closed_trajectories.py  drone_wrapper.py  manual_testing.py  my_solution.py  offb_position_control.py  offb_velocity_control.py  qt_test.py  trial.py
catkin_ws/src/drone_exercises/worlds/: iris_1_roadtexturesROS.world  roadtextures.world
catkin_ws/src/drone_wrapper/: CMakeLists.txt  package.xml
catkin_ws/src/drone_wrapper/src/: drone_wrapper.py
catkin_ws/src/jde-descriptions/: CMakeLists.txt  package.xml
catkin_ws/src/jde-descriptions/worlds/: roadtextures.world
catkin_ws/src/rqt_follow_road/: CMakeLists.txt  package.xml  plugin.xml  setup.py
catkin_ws/src/rqt_follow_road/perspectives/: FollowRoad.perspective
catkin_ws/src/rqt_follow_road/resource/: FollowRoad.ui  follow_road.ui  resources.qrc
catkin_ws/src/rqt_follow_road/scripts/: rqt_follow_road
catkin_ws/src/rqt_follow_road/src/rqt_follow_road/: follow_road.py
docs/: _config.yml  aboutme.md  blog.html  index.html
docs/_data/: navigation.yml
docs/_includes/: navigation.html
docs/_posts/: 2019-05-24-Hello World!.md  2019-05-24-hello_world.md  2019-05-28-bonding_review.md  2019-05-28-installation_things_1.md  2019-05-28-installation_things_2.md  2019-05-30-creating_new_models.md  2019-06-03-week1.md  2019-06-05-week2.md  2019-06-07-failsafes.md  2019-06-10-week2.md  2019-06-19-week3.md  2019-06-24-week4.md  2019-07-09-week5.md  2019-07-15-week6.md  2019-07-21-week7.md  2019-07-30-week8.md  2019-08-06-week9.md  2019-08-13-week10.md  2019-08-22-final.md
exercises/follow_road_complete/: MyAlgorithm.py
