<?xml version="1.0"?>
<package format="2">
  <name>drone_wrapper</name>
  <version>0.0.1</version>
  <description>The drone_wrapper package</description>
  
  <author email="nikhilvkhedekar@gmail.com">Nikhil Khedekar</author>
  <maintainer email="nikhilvkhedekar@gmail.com">Nikhil Khedekar</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
